--- a/hobbies.html
+++ b/hobbies.html
@@ -33,7 +33,7 @@
             <ol>
                 <li>en mis tiempos libres suelo hacer meditacion de mente para sanar el alma</li>
                 <li>tambien suelo tocar guitarra</li>
-                <li>practico bajo latino y ritmos culturales en la histia de colombia</li>
+                <li>practico bajo latino y ritmos culturales en la historia de colombia</li>
                 <li>estudio programacion de software</li>
                 <li></li>
             </ol>
